Fixed body overflow issue due to loader.

--- a/Assests/css/style.css
+++ b/Assests/css/style.css
@@ -1,9 +1,6 @@
 body {
   background: #ffffff;
 }
-.test {
-  display: block !important;
-}
 .spin-loader {
   display: -webkit-box;
   display: -webkit-flex;
