--- a/Assests/less/_base.less
+++ b/Assests/less/_base.less
@@ -21,9 +21,7 @@
 body{
 	background: @white;
 }
-.test{
-	display: block !important;
-}
+
 
 // ---------------------------
 // LOADER ANIMATION(SVG)-----------
